# firehose-otel-capture

./: .gitignore  LICENSE  Pipfile  README.md  app.py  cdk.json  modd.conf  setup.py  stack.py
app/: app_stack.py
hose-carrier/: Cargo.toml  README.md  rush
hose-carrier/src/: main.rs
spannerhose/: app_stack.py
